--- a/aaas-api-gateway/src/main/resources/application.yml
+++ b/aaas-api-gateway/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 zuul:
   routes:
+    api-mid:
+      path: /phoneapi-ssf/**
+      url: http://localhost:10023/phoneapi-ssf
     userinfo:
       path: /api/userinfo/**
       url: http://localhost:10021/api/userinfo/
