--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
@@ -53,11 +53,15 @@ using:
   spring:
     schedulerFactory: true
 org:
-    quartz:
-        jobStore:
-            class: org.quartz.simpl.RAMJobStore
-            misfireThreshold: 60000
-        threadPool:
-            class: org.quartz.simpl.SimpleThreadPool
-            threadCount: 2
-            threadsInheritContextClassLoaderOfInitializingThread: true
+  quartz:
+    jobStore:
+        class: org.quartz.simpl.RAMJobStore
+        misfireThreshold: 60000
+    threadPool:
+        class: org.quartz.simpl.SimpleThreadPool
+        threadCount: 2
+        threadsInheritContextClassLoaderOfInitializingThread: true
+cron:
+  frequency:
+  #每天17：30分开始
+    jobwithcrontrigger: 0 45 17 ? * * *
