--- a/aaas-api-risk-assessment/src/main/resources/application-test.yml
+++ b/aaas-api-risk-assessment/src/main/resources/application-test.yml
@@ -14,7 +14,7 @@ spring:
 
     data:
         mongodb:
-            host: 192.168.1.10
+            host: localhost
             port: 27017
             database: test
 
