--- a/aaas-api-data-manager/pom.xml
+++ b/aaas-api-data-manager/pom.xml
@@ -4,17 +4,18 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.shellshellfish.account</groupId>
-	<artifactId>aaas-api-data-manager</artifactId>
+	<artifactId>aaas-api-data_manager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>aaas-api-data-manager</name>
-	<description>aaas-api-data-manager</description>
+	<name>aaas-api-data_manager</name>
+	<description>aaas-api-data_manager</description>
 
 	<parent>
-		<groupId>com.shellshellfish</groupId>
-		<artifactId>aaas</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.5.7.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -26,7 +27,6 @@
 		<maven-surefire-report-plugin.version>2.11</maven-surefire-report-plugin.version>
 		<jxr-maven-plugin.version>2.3</jxr-maven-plugin.version>
 		<junit.version>4.12</junit.version>
-		<grpc.version>1.8.0</grpc.version>
 	</properties>
 
 	<dependencies>
@@ -48,45 +48,7 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<!-- <scope>provided</scope>-->
 		</dependency>
-
-		<!--grpc -->
-
-		<dependency>
-			<groupId>io.grpc</groupId>
-			<artifactId>grpc-netty</artifactId>
-			<version>${grpc.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.grpc</groupId>
-			<artifactId>grpc-protobuf</artifactId>
-			<version>${grpc.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.grpc</groupId>
-			<artifactId>grpc-stub</artifactId>
-			<version>${grpc.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.grpc</groupId>
-			<artifactId>grpc-core</artifactId>
-			<version>${grpc.version}</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/io.grpc/grpc-all -->
-		<dependency>
-			<groupId>io.grpc</groupId>
-			<artifactId>grpc-all</artifactId>
-			<version>${grpc.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.grpc</groupId>
-			<artifactId>grpc-testing</artifactId>
-			<version>${grpc.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<!--grpc -->
-
+		
 		<!-- 
 		<dependency>
                <groupId>javax.servlet</groupId>
@@ -177,69 +139,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>com.shellshellfish</groupId>
-			<artifactId>aaas-api-common</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
+		
+		
 		
 	</dependencies>
 
 	<build>
-
-        <extensions>
-            <extension>
-                <groupId>kr.motd.maven</groupId>
-                <artifactId>os-maven-plugin</artifactId>
-                <version>1.5.0.Final</version>
-            </extension>
-        </extensions>
 		<plugins>
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.0.2</version>
-				<executions>
-					<execution>
-						<id>copy-resources</id>
-						<!-- here the phase you need -->
-						<phase>validate</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>src/main/proto</outputDirectory>
-							<resources>
-								<resource>
-									<directory>../proto/fundsinfo/</directory>
-								</resource>
-								<resource>
-									<directory>../proto/datamanager/</directory>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.xolstice.maven.plugins</groupId>
-				<artifactId>protobuf-maven-plugin</artifactId>
-				<version>0.5.0</version>
-				<configuration>
-					<protocArtifact>com.google.protobuf:protoc:3.4.0:exe:${os.detected.classifier}</protocArtifact>
-					<pluginId>grpc-java</pluginId>
-					<pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compile</goal>
-							<goal>compile-custom</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
