--- a/aaas-api-data-manager/src/main/resources/application-test.yml
+++ b/aaas-api-data-manager/src/main/resources/application-test.yml
@@ -21,7 +21,7 @@ datasource:
   
 ---
 spring:
-  profiles: test
+  profiles: local, default
   data:
       mongodb:
         database: funds
@@ -41,6 +41,3 @@ datasource:
       format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect
 
-grpc:
-  host: localhost
-  port: 10031
