--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
@@ -29,6 +29,7 @@ spring:
     topicExchangeName: com-ssf-topic-exchange
     topicPay: shellshellfish.pay
     topicOrder: shellshellfish.order
+    topicUserinfo: shellshellfish.userinfo
   data:
     mongodb:
       host: 192.168.1.10
@@ -59,6 +60,7 @@ grpc:
   finance_prod_client:
     host: localhost
     port: 10030
+
 using:
   spring:
     schedulerFactory: true
