--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
@@ -59,6 +59,8 @@ grpc:
   finance_prod_client:
     host: localhost
     port: 10030
+  host: localhost
+  port: 10111
 using:
   spring:
     schedulerFactory: true
