--- a/aaas-api-user-login/pom.xml
+++ b/aaas-api-user-login/pom.xml
@@ -30,7 +30,7 @@
 		<lombok.version>1.16.10</lombok.version>
 
 		<grpc.version>1.8.0</grpc.version><!-- CURRENT_GRPC_VERSION -->
-
+    <fabric8.generator.from>fabric8/s2i-java</fabric8.generator.from>
 	</properties>
 
 	<dependencies>
@@ -163,6 +163,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>aaas-api-user-login</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -204,6 +205,44 @@
 						<phase>test</phase>
 						<goals>
 							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>io.fabric8</groupId>
+				<artifactId>fabric8-maven-plugin</artifactId>
+				<version>3.5.30</version>
+				<configuration>
+					<resources>
+						<labels>
+							<all>
+								<property>
+									<name>app</name>
+									<value>aaas-api-user-login</value>
+								</property>
+								<property>
+									<name>hystrix.enabled</name>
+									<value>false</value>
+								</property>
+							</all>
+						</labels>
+					</resources>
+					<enricher>
+						<config>
+							<spring-boot-health-check>
+								<port>4444</port>
+							</spring-boot-health-check>
+						</config>
+					</enricher>
+				</configuration>
+				<executions>
+					<execution>
+						<id>fmp</id>
+						<goals>
+							<goal>resource</goal>
+							<goal>helm</goal>
+							<goal>build</goal>
 						</goals>
 					</execution>
 				</executions>
