--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-prod.yml
@@ -26,7 +26,16 @@ spring:
       host: localhost
       port: 27017
       database: zhongzheng
-
+  redis:
+    host: localhost
+    port: 6379
+    password: redis123
+    timeout: 0
+    pool:
+      max-active: 8
+      max-wait: -1
+      max-idle: 8
+      min-idle: 0
 datasource:
   sampleapp:
     url: jdbc:mysql://localhost:3306/ssftrdorder?useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
