--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -15,7 +15,7 @@ spring:
 #        username: ssf09
 
         password: 1xtZgrp#XzxGi$3OZ
-        url: jdbc:mysql://192.168.1.15:3306/choicedebug?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=utf-8
+        url: jdbc:mysql://192.168.1.15:3306/choicedebug?autoReconnect=true&allowMultiQueries=true&failOverReadOnly=false&useSSL=false&useUnicode=true&characterEncoding=utf-8
         username: ssf0015
     jpa:
       hibernate:
