--- a/aaas-api-asset-allocation/pom.xml
+++ b/aaas-api-asset-allocation/pom.xml
@@ -81,11 +81,11 @@
             <artifactId>h2</artifactId>
             <version>1.3.156</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.shellshellfish</groupId>-->
-            <!--<artifactId>aaas-api-common</artifactId>-->
-            <!--<version>0.0.1-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.shellshellfish</groupId>
+            <artifactId>aaas-api-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-core</artifactId>
@@ -169,7 +169,7 @@
             <groupId>com.matlab</groupId>
             <artifactId>matlab-javabuilder</artifactId>
             <version>0.0.1</version>
-            <classifier>${os.detected.classifier}</classifier>
+            <classifier>linux-x86_64</classifier>
         </dependency>
     </dependencies>
 
