--- a/aaas-mid-api/pom.xml
+++ b/aaas-mid-api/pom.xml
@@ -203,6 +203,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
@@ -213,6 +214,42 @@
                         <phase>test</phase>
                         <goals>
                             <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>fabric8-maven-plugin</artifactId>
+                <version>3.5.30</version>
+                <configuration>
+                    <resources>
+                        <labels>
+                            <all>
+                                <property>
+                                    <name>app</name>
+                                    <value>aaas-mid-api</value>
+                                </property>
+                                <property>
+                                    <name>hystrix.enabled</name>
+                                    <value>false</value>
+                                </property>
+                            </all>
+                        </labels>
+                    </resources>
+                    <enricher>
+                        <config>
+                            <spring-boot-health-check>
+                                <port>4444</port>
+                            </spring-boot-health-check>
+                        </config>
+                    </enricher>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>fmp</id>
+                        <goals>
+                            <goal>resource</goal>
                         </goals>
                     </execution>
                 </executions>
