--- a/aaas-finance-trade/aaas-finance-trade-pay/Dockerfile
+++ b/aaas-finance-trade/aaas-finance-trade-pay/Dockerfile
@@ -1,7 +1,7 @@
 FROM fabric8/java-jboss-openjdk8-jdk:1.2.3
-ENV JAVA_APP_JAR  aaas-api-user-login.jar 
+ENV JAVA_APP_JAR  aaas-finance-trade-pay.jar 
 ENV AB_ENABLED off
 ENV AB_JOLOKIA_AUTH_OPENSHIFT true
 ENV JAVA_OPTIONS -Xmx256m  -Dspring.profiles.active=k8s  -Djava.security.egd=file:///dev/./urandom
-EXPOSE 10060  10061 
-ADD target/aaas-api-user-login.jar  /deployments/
+EXPOSE 10110 10111
+ADD target/aaas-finance-trade-pay.jar  /deployments/
