--- a/aaas-api-user-info/src/main/resources/application-k8s.yml
+++ b/aaas-api-user-info/src/main/resources/application-k8s.yml
@@ -63,7 +63,7 @@ grpc:
 #    host: localhost
     port: 10061
   data-manager-rpc:
-    host: aaas-api-data_manager
+    host: aaas-api-data-manager
     port: 10031
   finance-trade-order-rpc:
     host: aaas-finance-trade-order
