--- a/aaas-api-user-info/src/main/resources/application-k8s.yml
+++ b/aaas-api-user-info/src/main/resources/application-k8s.yml
@@ -43,7 +43,7 @@ datasource:
   sampleapp:
     url: jdbc:mysql://external-mysql-service:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
     username: sa
-    password: N4eTVr89lX9BaPcx
+    password: 1rIQ9wi!@g3P$Qh* 
     driverClassName: com.mysql.jdbc.Driver
     defaultSchema: ssfuser
     maxPoolSize: 20
