--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -19,7 +19,13 @@ spring:
         username: ssf0015
     jpa:
       hibernate:
-        ddl-auto: update
+        ddl-auto: update:
+  data:
+    mongodb:
+      database: funds
+      host: 192.168.1.10
+      port: 27017
+      collection: portfolio_yield_all
 grpc:
   host: localhost
   port: 10021
