--- a/aaas-api-asset-allocation/src/main/resources/application-prod.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-prod.yml
@@ -16,6 +16,12 @@ spring:
     jpa:
       hibernate:
         ddl-auto: update
+  data:
+    mongodb:
+      database: funds
+      host: localhost
+      port: 27017
+      collection: portfolio_yield_all
 grpc:
   host: localhost
   port: 10021
