--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -19,7 +19,7 @@ spring:
         username: ssf0015
     jpa:
       hibernate:
-        ddl-auto: update:
+        ddl-auto: update
   data:
     mongodb:
       database: funds
