--- a/aaas-api-user-info/pom.xml
+++ b/aaas-api-user-info/pom.xml
@@ -363,7 +363,7 @@
 						<id>fmp</id>
 						<phase>deploy</phase>
 						<goals>
-							<goal>resource</goal>
+							<goal>deploy</goal>
 						</goals>
 					</execution>
 				</executions>
