--- a/aaas-api-dm/src/main/resources/application-dev.yml
+++ b/aaas-api-dm/src/main/resources/application-dev.yml
@@ -10,6 +10,10 @@ spring:
         database: funds
         host: 192.168.1.10
         port: 27017
+  http:
+    multipart:
+      max-file-size: 2MB
+      max-request-size: 10MB
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.10:3306/ssftrdorder?useUnicode=true&characterEncoding=utf-8
@@ -25,3 +29,10 @@ datasource:
       dialect: org.hibernate.dialect.MySQLDialect
 shellshellfish:
   asset-alloction-url: "http://localhost:10020"
+  csvFilePath: temp
+  csvFileOriginName: csvFundsInfo
+cron:
+  frequency:
+    #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
+    # 	Every 10 minutes
+    jobwithcrontrigger: 0 0/10 0 ? * * *
