--- a/aaas-api-dm/src/main/resources/application-k8s.yml
+++ b/aaas-api-dm/src/main/resources/application-k8s.yml
@@ -27,6 +27,10 @@ spring:
         database: funds
         host: external-mongo-service
         port: 27017
+  http:
+    multipart:
+      max-file-size: 2MB
+      max-request-size: 10MB
 datasource:
   sampleapp:
     url: jdbc:mysql://external-mysql-service:3306/ssftrdorder?useUnicode=true&characterEncoding=utf-8
