--- a/aaas-api-dm/src/main/resources/application-prod.yml
+++ b/aaas-api-dm/src/main/resources/application-prod.yml
@@ -27,6 +27,10 @@ spring:
         database: funds
         host: localhost
         port: 27017
+  http:
+    multipart:
+      max-file-size: 2MB
+      max-request-size: 10MB
 datasource:
   sampleapp:
     url: jdbc:mysql://localhost:3306/ssftrdorder?useUnicode=true&characterEncoding=utf-8
@@ -42,3 +46,8 @@ datasource:
       dialect: org.hibernate.dialect.MySQLDialect
 shellshellfish:
   asset-alloction-url: "http://localhost:10020"
+cron:
+  frequency:
+    #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
+    # 	Every 10 minutes
+    jobwithcrontrigger: 0 0/10 0 ? * * *
