--- a/aaas-api-dm/src/main/resources/application-test.yml
+++ b/aaas-api-dm/src/main/resources/application-test.yml
@@ -10,6 +10,10 @@ spring:
         database: funds
         host: 192.168.1.10
         port: 27017
+  http:
+    multipart:
+      max-file-size: 2MB
+      max-request-size: 10MB
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.10:3306/ssftrdorder?useUnicode=true&characterEncoding=utf-8
