--- a/aaas-api-dm/pom.xml
+++ b/aaas-api-dm/pom.xml
@@ -164,6 +164,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>4.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>aaas-api-data-manager</finalName> 
