--- a/aaas-app-tools/aaas-app-checkfunds/pom.xml
+++ b/aaas-app-tools/aaas-app-checkfunds/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.9.RELEASE</version>
+    <version>2.0.0.RELEASE</version>	
   </parent>
 
   <properties>
@@ -197,6 +197,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
     </dependency>
 
   </dependencies>
