--- a/aaas-api-finance/pom.xml
+++ b/aaas-api-finance/pom.xml
@@ -18,6 +18,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<h2.version>1.4.187</h2.version>
+		<grpc.version>1.8.0</grpc.version>
 	</properties>
 
 	<dependencies>
@@ -83,14 +84,51 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
     </dependencies>
-	
+
 	<build>
+		<resources>
+			<resource>
+				<directory>lib</directory>
+				<targetPath>BOOT-INF/lib/</targetPath>
+				<includes>
+					<include>**/*.jar</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+		<extensions>
+			<extension>
+				<groupId>kr.motd.maven</groupId>
+				<artifactId>os-maven-plugin</artifactId>
+				<version>1.5.0.Final</version>
+			</extension>
+		</extensions>
 		<plugins>
-			<plugin><!-- Include if you want to make an executable jar[FAT JAR which 
-					includes all dependencies along with sprinboot loader] that you can run on 
-					commandline using java -jar NAME -->
+			<!--<plugin>-->
+			<!--<artifactId>maven-jar-plugin</artifactId>-->
+			<!--<configuration>-->
+			<!--<classifier>${os.detected.classifier}</classifier>-->
+			<!--</configuration>-->
+			<!--</plugin>-->
+
+
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+					<compilerArguments>
+						<extdirs>${project.basedir}/lib</extdirs>
+					</compilerArguments>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>io.fabric8</groupId>
@@ -102,7 +140,7 @@
 							<all>
 								<property>
 									<name>app</name>
-									<value>aaas-api-finance</value>
+									<value>aaas-api-asset-allocation</value>
 								</property>
 								<property>
 									<name>hystrix.enabled</name>
@@ -122,6 +160,7 @@
 				<executions>
 					<execution>
 						<id>fmp</id>
+						<phase>deploy</phase>
 						<goals>
 							<goal>deploy</goal>
 						</goals>
