--- a/aaas-api-dm/src/main/resources/application-test.yml
+++ b/aaas-api-dm/src/main/resources/application-test.yml
@@ -12,9 +12,9 @@ spring:
         port: 27017
 datasource:
   sampleapp:
-    url: jdbc:mysql://192.168.1.10:3306/ssftrdorder?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://192.168.1.10:30006/ssftrdorder?useUnicode=true&characterEncoding=utf-8
     username: sa
-    password: abcd1234
+    password: N4eTVr89lX9BaPcx
     driverClassName: com.mysql.jdbc.Driver
     defaultSchema:
     maxPoolSize: 20
