--- a/aaas-api-asset-allocation/src/main/resources/application-test.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-test.yml
@@ -8,9 +8,9 @@ spring:
   datasource:
       driverClassName: com.mysql.jdbc.Driver
       password: 1rIQ9wi!@g3P$Qh*
-      url: jdbc:mysql://localhost:3306/choice?useUnicode=true&characterEncoding=utf-8
+      url: jdbc:mysql://192.168.1.249:30006/choice?useUnicode=true&characterEncoding=utf-8
       username: ssf08
-#        password: uCIPzdEJzbeoFAMj
+#        password: 1rIQ9wi!@g3P$Qh*
 #        url: jdbc:mysql://172.16.128.72:3306/choicecopy?useUnicode=true&characterEncoding=utf-8
 #        username: ssf09
   jpa:
@@ -19,8 +19,8 @@ spring:
   data:
     mongodb:
       database: funds
-      host: localhost
-      port: 27017
+      host: 192.168.1.249
+      port: 30005
       collection: portfolio_yield_all
 grpc:
   host: localhost
