--- a/aaas-app-tools/aaas-app-checkfunds/src/main/resources/logback.properties
+++ b/aaas-app-tools/aaas-app-checkfunds/src/main/resources/logback.properties
@@ -2,11 +2,13 @@
 #<include resource="includedConfig.xml"/>  resource, file, url (被包含的文件需要满足一定格式)
 context.name=aaas-app-checkfunds
 log.dir=./logs/aaas-app-checkfunds
-rolling.policy.file.name.pattern=yyyy-MM-dd HH
+rolling.policy.file.name.pattern=yyyy-MM-dd
 max.file.size=100MB
 max.history=50
-conversion.pattern=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{30}[%line]: %m%n
+
+conversion.pattern=%d{yyyy-MM-dd HH:mm:ss} %highlight(%-5level) %logger{30}[%line]: %m%n
 root.level=info
+
 
 
 
