--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -4,11 +4,11 @@ mybatis:
     config-locations: classpath:mybatis/mybatis-config.xml
     mapper-locations: classpath:mybatis/mapper/*.xml
 spring:
-  datasource:
-      driverClassName: com.mysql.jdbc.Driver
-      password: t5MqqozQDNramNHh
-      url: jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-      username: ssf08
+#  datasource:
+#      driverClassName: com.mysql.jdbc.Driver
+#      password: t5MqqozQDNramNHh
+#      url: jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+#      username: ssf08
 
 #        password: uCIPzdEJzbeoFAMj
 #        url: jdbc:mysql://192.168.1.10:3306/choicecopy?useUnicode=true&characterEncoding=utf-8
@@ -26,6 +26,28 @@ spring:
       host: 192.168.1.10
       port: 27017
       collection: portfolio_yield_all
+
+
+
+datasource:
+  sampleapp:
+    url: jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    username: ssf08
+    password: t5MqqozQDNramNHh
+    driverClassName: com.mysql.jdbc.Driver
+    defaultSchema: ssfuser
+    maxPoolSize: 20
+    hibernate:
+      connection:
+        useUnicode: true
+        characterEncoding: UTF-8
+      jdbc:
+        batch_size: 50
+      hbm2ddl.method: update
+      show_sql: true
+      format_sql: true
+      dialect: org.hibernate.dialect.MySQLDialect
+
 grpc:
   host: localhost
   port: 10021
