--- a/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-dev.yml
+++ b/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-dev.yml
@@ -58,8 +58,8 @@ org:
 cron:
   frequency:
     #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
-    # 	Every 10 minutes
-    jobCheckFunds: 0 0/2 * 1/1 * ? *
+    # 	Every 3 hours
+    jobCheckFunds: 0 0 0/3 1/1 * ? *
 using:
   spring:
     schedulerFactory: true
