--- a/aaas-api-asset-allocation/pom.xml
+++ b/aaas-api-asset-allocation/pom.xml
@@ -171,6 +171,20 @@
             <version>0.0.1</version>
             <classifier>${os.detected.classifier}</classifier>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.0.6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>3.0.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
