--- a/aaas-api-user-login/src/main/resources/application-it.yml
+++ b/aaas-api-user-login/src/main/resources/application-it.yml
@@ -1,3 +1,12 @@
+server:
+  port: 10070
+  contextPath: /
+
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: update
+
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.249:3306/ssflogin?useUnicode=true&characterEncoding=utf-8
